# rust-gpu-app

./: Cargo.toml  LICENSE  README.md  build.rs
shader/: Cargo.toml
shader/src/: lib.rs
src/: compute.wgsl  main.rs
